Clean up to work with revised code.

--- a/test_anim.ipynb
+++ b/test_anim.ipynb
@@ -24,14 +24,14 @@
     }
    ],
    "source": [
-    "from anim import build_frames, merge_frames, create_gif\n",
+    "from anim import build_frames, merge_frames, create_movie\n",
     "from copy import copy\n",
     "import numpy as np\n",
     "import os\n",
     "import shelve\n",
     "\n",
     "from ntwk import NtwkResponse\n",
-    "from sim import save_time_file\n",
+    "from aux import save_time_file\n",
     "\n",
     "DUR = 2\n",
     "FS = 1000\n",
@@ -53,13 +53,13 @@
     "xs = np.arange(len(STARTS))\n",
     "ys = np.arange(len(STARTS))\n",
     "\n",
-    "positions = np.array([xs, ys])\n",
+    "place_field_centers = np.array([xs, ys])\n",
     "\n",
     "# save everything\n",
     "save_time_file('test_anim/time', ts)\n",
     "ntwk_response = NtwkResponse(\n",
     "    vs, spks, V_REST, V_TH,\n",
-    "    gs=None, ws_rcr=None, ws_up=None, positions=positions)\n",
+    "    gs=None, ws_rcr=None, ws_up=None, place_field_centers=place_field_centers)\n",
     "ntwk_response.save('test_anim/ntwk_activity')"
    ]
   },
@@ -99,10 +99,23 @@
       "Data downsampled.\n",
       "Generating and saving 60 frames...\n",
       "Frames saved.\n",
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
+      "Generating movie and saving at \"test_anim/ntwk_activity_30_fps_15Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
       "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
@@ -111,10 +124,23 @@
       "Data downsampled.\n",
       "Generating and saving 240 frames...\n",
       "Frames saved.\n",
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
+      "Generating movie and saving at \"test_anim/ntwk_activity_120_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
       "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
@@ -123,10 +149,23 @@
       "Data downsampled.\n",
       "Generating and saving 120 frames...\n",
       "Frames saved.\n",
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
+      "Generating movie and saving at \"test_anim/ntwk_activity_60_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
       "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
       "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
@@ -135,16 +174,29 @@
       "Data downsampled.\n",
       "Generating and saving 60 frames...\n",
       "Frames saved.\n",
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n"
+      "Generating movie and saving at \"test_anim/ntwk_activity_30_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n"
      ]
     }
    ],
    "source": [
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
-    "    save_file_gif = 'test_anim/ntwk_activity_{}_fps_{}Hz_playback'.format(\n",
+    "    save_file_movie = 'test_anim/ntwk_activity_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
     "\n",
     "    save_files = build_frames.ntwk_activity(\n",
@@ -156,55 +208,15 @@
     "        title='Network activity',\n",
     "        x_label='x (m)',\n",
     "        y_label='y (m)',\n",
-    "        fig_size=(10, 7),\n",
+    "        fig_size=(7, 7),\n",
     "        verbose=True)\n",
     "    \n",
-    "    gif = create_gif(\n",
-    "        save_files, save_file=save_file_gif,\n",
+    "    movie = create_movie(\n",
+    "        save_files, save_file=save_file_movie,\n",
     "        playback_fps=playback_fps, verbose=True)\n",
     "\n",
     "save_files_ntwk = copy(save_files)\n",
-    "gif_ntwk = gif"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Display resulting example GIF"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_anim/ntwk_activity_30_fps_30Hz_playback.gif\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"test_anim/ntwk_activity_30_fps_30Hz_playback.gif\" />"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from IPython import display\n",
-    "\n",
-    "print(gif_ntwk)\n",
-    "display.HTML('<img src=\"{}\" />'.format(gif_ntwk))"
+    "movie_ntwk = movie"
    ]
   },
   {
@@ -216,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -248,12 +260,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Build frames and gif"
+    "### Build frames and MP4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -262,28 +274,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
-      "Loading source images...\n",
+      "Generating movie and saving at \"test_anim/traj_30_fps_15Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
-      "Loading source images...\n",
+      "Generating movie and saving at \"test_anim/traj_120_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n",
-      "Loading source images...\n",
+      "Generating movie and saving at \"test_anim/traj_60_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 504) to (512, 512) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n"
+      "Generating movie and saving at \"test_anim/traj_30_fps_30Hz_playback.mp4\"...\n",
+      "Movie generated.\n"
      ]
     }
    ],
    "source": [
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
-    "    save_file_gif = 'test_anim/traj_{}_fps_{}Hz_playback'.format(\n",
+    "    save_file_movie = 'test_anim/traj_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
     "\n",
     "    save_files = build_frames.traj(\n",
@@ -294,68 +358,50 @@
     "        title='Trajectory through space',\n",
     "        x_label='x (m)',\n",
     "        y_label='y (m)',\n",
-    "        fig_size=(10, 7),\n",
+    "        fig_size=(7, 7),\n",
     "        verbose=True)\n",
     "\n",
-    "    gif = create_gif(\n",
-    "        save_files, save_file=save_file_gif,\n",
+    "    movie = create_movie(\n",
+    "        save_files, save_file=save_file_movie,\n",
     "        playback_fps=playback_fps, verbose=True)\n",
     "\n",
     "save_files_traj = copy(save_files)\n",
-    "gif_traj = gif"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_anim/traj_30_fps_30Hz_playback.gif\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"test_anim/traj_30_fps_30Hz_playback.gif\" />"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(gif_traj)\n",
-    "display.HTML('<img src=\"{}\" />'.format(gif_traj))"
+    "movie_traj = movie"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Create merged frames and gif"
+    "# Create merged frames and MP4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading source images...\n",
+      "Loading source images...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (504, 1008) to (512, 1008) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to None (risking incompatibility). You may also see a FFMPEG warning concerning speedloss due to data not being aligned.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Source images loaded.\n",
-      "Generating gif...\n",
-      "Gif generated.\n"
+      "Generating movie and saving at \"test_anim/merged.mp4\"...\n",
+      "Movie generated.\n"
      ]
     }
    ],
@@ -366,40 +412,7 @@
     "\n",
     "merged_frames = merge_frames([save_files_ntwk, save_files_traj], save_prefix, rects, size)\n",
     "\n",
-    "gif_merged = create_gif(merged_frames, 'test_anim/merged', playback_fps=30, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "test_anim/merged.gif\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"test_anim/merged.gif\" />"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "print(gif_merged)\n",
-    "display.HTML('<img src=\"{}\" />'.format(gif_merged))"
+    "movie_merged = create_movie(merged_frames, 'test_anim/merged', playback_fps=30, verbose=True)"
    ]
   }
  ],
