--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PARAMETER DEFINITIONS AND VALUES"
+    "## PARAMETER DEFINITIONS AND VALUES"
    ]
   },
   {
@@ -21,8 +21,8 @@
     "|$BOX_{r}$|`BOX_R`|right box bound|1|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
     "|$BOX_{b}$|`BOX_B`|bottom box bound|-0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
     "|$BOX_{t}$|`BOX_T`|top box bound|0.5|m|open-field dimensions used in Mizuseki et al., (2012)|\n",
-    "|$s_{trj}$|`S_TRJ`|trajectory average speed|20|cm/s|approximate mean of rat running velocity distributions in McNaughton, Barnes, and O'Keefe (1984)|\n",
-    "|$\\tau_{trj}$|`T_TRJ`|trajectory correlation time|1|s|seems like right order of magnitude|\n",
+    "|$s_{traj}$|`S_TRAJ`|trajectory average speed|20|cm/s|approximate mean of rat running velocity distributions in McNaughton, Barnes, and O'Keefe (1984)|\n",
+    "|$\\tau_{traj}$|`T_TRAJ`|trajectory correlation time|1|s|seems like right order of magnitude|\n",
     "|$x_0$|`X_0`|initial $x$ position|?|m||\n",
     "|$y_0$|`Y_0`|initial $y$ position|?|m||\n",
     "|$v^x_0$|`VX_0`|initial $x$ velocity|?|m/s||\n",
