Modify so that ECII-CA3 synapses are NMDA-based.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -45,9 +45,9 @@
     "|$p_N^{EC-CA3}$|`P_N_EC_CA3`|NMDA cxn prob for EC->CA3 cxns|1|%||\n",
     "|$w_A^{CA3-CA3}$|`W_A_CA3_CA3`|AMPA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
     "|$w_N^{CA3-CA3}$|`W_N_CA3_CA3`|NMDA cxn weight for CA3-CA3 recurrent cxns|0|-||\n",
-    "|$w_A^{EC-CA3,i}$|`W_A_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|0.008|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
-    "|$w_A^{EC-CA3,f}$|`W_A_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|0.017|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
-    "|$w_N^{EC-CA3}$|`W_N_EC_CA3`|NMDA cxn weight for EC->CA3 cxns|0|-||\n",
+    "|$w_A^{EC-CA3}$|`W_A_EC_CA3`|AMPA cxn weight for EC->CA3 cxns|0|-||\n",
+    "|$w_N^{EC-CA3,i}$|`W_N_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|0.00065|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
+    "|$w_N^{EC-CA3,f}$|`W_N_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|0.000135|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.017|-|chosen to yield the ~ 4 mV MF-CA3 EPSPs measured in Hyun et al., 2015 Fig 1Ab (though note that we are ignoring the strong short-term facilitation typically seen at these synapses, since our primary goal is only to provide place-tuned input to the CA3 PCS)|\n",
     "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||"
    ]
@@ -80,8 +80,8 @@
     "|$E_{NMDA}$|`E_NMDA`|NMDA reversal potential|0|mV|taken from Huang 2015|\n",
     "|$E_{GABA}$|`E_GABA`|GABA reversal potential|-80|mV|taken from Huang 2015|\n",
     "|$\\tau_{AMPA}$|`T_AMPA`|AMPA conductance decay time|2|ms|taken from Huang 2015|\n",
-    "|$\\tau_{NMDA}$|`T_NMDA`|NMDA conductance decay time|?|ms||\n",
-    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|?|ms||"
+    "|$\\tau_{NMDA}$|`T_NMDA`|NMDA conductance decay time|80|ms|taken from Huang 2015|\n",
+    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|5|ms|taken from Huang 2015|"
    ]
   },
   {
