Fix plasticity code.

--- a/1_basic_simulations.ipynb
+++ b/1_basic_simulations.ipynb
@@ -297,7 +297,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "frames_traj = build_frames.traj(\n",
