Convert all saving and loading of simulation files to using np.save/np.load instead of shelve.

--- a/test_anim.ipynb
+++ b/test_anim.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'test_anim/ntwk_activity'"
+       "'test_anim/ntwk.npy'"
       ]
      },
      "execution_count": 1,
@@ -24,13 +24,13 @@
     }
    ],
    "source": [
-    "from anim import build_frames, merge_frames, create_movie\n",
+    "from anim import build_frames, merge_frames, create_mp4\n",
     "from copy import copy\n",
     "import numpy as np\n",
     "import os\n",
-    "import shelve\n",
     "\n",
     "from ntwk import NtwkResponse\n",
+    "from aux import save\n",
     "from aux import save_time_file\n",
     "\n",
     "DUR = 2\n",
@@ -56,11 +56,11 @@
     "place_field_centers = np.array([xs, ys])\n",
     "\n",
     "# save everything\n",
-    "save_time_file('test_anim/time', ts)\n",
+    "save_time_file('test_anim/time.npy', ts)\n",
     "ntwk_response = NtwkResponse(\n",
     "    vs, spks, V_REST, V_TH,\n",
     "    gs=None, ws_rcr=None, ws_up=None, place_field_centers=place_field_centers)\n",
-    "ntwk_response.save('test_anim/ntwk_activity')"
+    "ntwk_response.save('test_anim/ntwk.npy')"
    ]
   },
   {
@@ -91,8 +91,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
-      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
+      "Using timestamp file \"test_anim/time.npy\" and activity file \"test_anim/ntwk.npy\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000.0 Hz to 30 fps...\n",
@@ -114,10 +114,10 @@
      "output_type": "stream",
      "text": [
       "Source images loaded.\n",
-      "Generating movie and saving at \"test_anim/ntwk_activity_30_fps_15Hz_playback.mp4\"...\n",
+      "Generating movie and saving at \"test_anim/ntwk_30_fps_15Hz_playback.mp4\"...\n",
       "Movie generated.\n",
-      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
-      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
+      "Using timestamp file \"test_anim/time.npy\" and activity file \"test_anim/ntwk.npy\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000.0 Hz to 120 fps...\n",
@@ -139,10 +139,10 @@
      "output_type": "stream",
      "text": [
       "Source images loaded.\n",
-      "Generating movie and saving at \"test_anim/ntwk_activity_120_fps_30Hz_playback.mp4\"...\n",
+      "Generating movie and saving at \"test_anim/ntwk_120_fps_30Hz_playback.mp4\"...\n",
       "Movie generated.\n",
-      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
-      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
+      "Using timestamp file \"test_anim/time.npy\" and activity file \"test_anim/ntwk.npy\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000.0 Hz to 60 fps...\n",
@@ -164,10 +164,10 @@
      "output_type": "stream",
      "text": [
       "Source images loaded.\n",
-      "Generating movie and saving at \"test_anim/ntwk_activity_60_fps_30Hz_playback.mp4\"...\n",
+      "Generating movie and saving at \"test_anim/ntwk_60_fps_30Hz_playback.mp4\"...\n",
       "Movie generated.\n",
-      "Using timestamp file \"test_anim/time\" and activity file \"test_anim/ntwk_activity\".\n",
-      "Frames will be saved with prefix \"test_anim/ntwk_activity_frames/frame\".\n",
+      "Using timestamp file \"test_anim/time.npy\" and activity file \"test_anim/ntwk.npy\".\n",
+      "Frames will be saved with prefix \"test_anim/ntwk_frames/frame\".\n",
       "Loading timestamps and network activity data...\n",
       "Data loaded.\n",
       "Downsampling data from 1000.0 Hz to 30 fps...\n",
@@ -189,29 +189,29 @@
      "output_type": "stream",
      "text": [
       "Source images loaded.\n",
-      "Generating movie and saving at \"test_anim/ntwk_activity_30_fps_30Hz_playback.mp4\"...\n",
+      "Generating movie and saving at \"test_anim/ntwk_30_fps_30Hz_playback.mp4\"...\n",
       "Movie generated.\n"
      ]
     }
    ],
    "source": [
     "for fps, playback_fps in zip(FPS, PLAYBACK_FPS):\n",
-    "    save_file_movie = 'test_anim/ntwk_activity_{}_fps_{}Hz_playback'.format(\n",
+    "    save_file_movie = 'test_anim/ntwk_{}_fps_{}Hz_playback'.format(\n",
     "        fps, playback_fps)\n",
     "\n",
     "    save_files = build_frames.ntwk_activity(\n",
-    "        save_prefix='test_anim/ntwk_activity_frames/frame',\n",
-    "        time_file='test_anim/time',\n",
-    "        activity_file='test_anim/ntwk_activity',\n",
+    "        save_prefix='test_anim/ntwk_frames/frame',\n",
+    "        time_file='test_anim/time.npy',\n",
+    "        ntwk_file='test_anim/ntwk.npy',\n",
     "        fps=fps,\n",
-    "        frames_per_spike=5,\n",
+    "        frames_per_spk=5,\n",
     "        title='Network activity',\n",
     "        x_label='x (m)',\n",
     "        y_label='y (m)',\n",
     "        fig_size=(7, 7),\n",
     "        verbose=True)\n",
     "    \n",
-    "    movie = create_movie(\n",
+    "    movie = create_mp4(\n",
     "        save_files, save_file=save_file_movie,\n",
     "        playback_fps=playback_fps, verbose=True)\n",
     "\n",
@@ -229,10 +229,19 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'test_anim/traj.npy'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from scipy.ndimage import gaussian_filter1d\n",
     "\n",
@@ -251,9 +260,8 @@
     "if not os.path.exists('test_anim'): os.makedirs('test_anim')\n",
     "\n",
     "# save traj file\n",
-    "data_tr = shelve.open('test_anim/traj')\n",
-    "data_tr['xys'] = xys\n",
-    "data_tr.close()"
+    "data_tr = {'xys': xys}\n",
+    "save('test_anim/traj.npy', data_tr)"
    ]
   },
   {
@@ -352,8 +360,8 @@
     "\n",
     "    save_files = build_frames.traj(\n",
     "        save_prefix='test_anim/traj_frames/frame',\n",
-    "        time_file='test_anim/time',\n",
-    "        traj_file='test_anim/traj',\n",
+    "        time_file='test_anim/time.npy',\n",
+    "        traj_file='test_anim/traj.npy',\n",
     "        fps=fps,\n",
     "        title='Trajectory through space',\n",
     "        x_label='x (m)',\n",
@@ -361,7 +369,7 @@
     "        fig_size=(7, 7),\n",
     "        verbose=True)\n",
     "\n",
-    "    movie = create_movie(\n",
+    "    movie = create_mp4(\n",
     "        save_files, save_file=save_file_movie,\n",
     "        playback_fps=playback_fps, verbose=True)\n",
     "\n",
@@ -412,7 +420,7 @@
     "\n",
     "merged_frames = merge_frames([save_files_ntwk, save_files_traj], save_prefix, rects, size)\n",
     "\n",
-    "movie_merged = create_movie(merged_frames, 'test_anim/merged', playback_fps=30, verbose=True)"
+    "movie_merged = create_mp4(merged_frames, 'test_anim/merged', playback_fps=30, verbose=True)"
    ]
   }
  ],
