Allow specification of different cell types with different colors.

--- a/test_anim_0_basic.ipynb
+++ b/test_anim_0_basic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Create simple neural sequence and save timestamps and activity pattern to file"
+    "# Create simple neural sequence and save timestamps and activity pattern to file"
    ]
   },
   {
@@ -24,6 +24,7 @@
     }
    ],
    "source": [
+    "%reset -f\n",
     "from anim import build_frames, merge_frames, create_mp4\n",
     "from copy import copy\n",
     "import numpy as np\n",
