Determine INH-onto-PC cxn weight.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -49,7 +49,8 @@
     "|$w_N^{EC-CA3,i}$|`W_N_EC_CA3_I`|initial AMPA cxn weight for EC->CA3 cxns|0.00065|-|chosen to yield the ~ 2 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_N^{EC-CA3,f}$|`W_N_EC_CA3_F`|final AMPA cxn weight for EC->CA3 cxns|0.000135|-|chosen to yield the ~ 4 mV EC-CA3 (perforant path) EPSPs measured in Hyun et al., 2015 Fig 1Ab|\n",
     "|$w_A^{PL-CA3}$|`W_A_PL_CA3`|AMPA cxn weight for place-tuned neurons onto CA3|0.017|-|chosen to yield the ~ 4 mV MF-CA3 EPSPs measured in Hyun et al., 2015 Fig 1Ab (though note that we are ignoring the strong short-term facilitation typically seen at these synapses, since our primary goal is only to provide place-tuned input to the CA3 PCS)|\n",
-    "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||"
+    "|$w_N^{PL-CA3}$|`W_N_PL_CA3`|NMDA cxn weight for place-tuned neurons onto CA3|0|-||\n",
+    "|$w_G^{INH-PC}$|`W_G_INH_PC`|GABA cxn weight for INH cells onto PCs in CA3|0.024|-|chosen to yield -2 mV IPSP as measured in Miles 1990|"
    ]
   },
   {
