Determine PC-onto-INH ampa weight.

--- a/parameters.ipynb
+++ b/parameters.ipynb
@@ -64,8 +64,10 @@
     "|$v_{rest}$|`V_REST`|single-unit resting potential|-68|mV|directly measured in Guzman et al., (2016)|\n",
     "|$v_{th}$|`V_TH`|single-unit firing threshold|-36|mV|directly measured in Guzman et al., (2016)|\n",
     "|$v_{reset}$|`V_RESET`|reset potential|-68|mV|same as resting|\n",
-    "|$\\tau_m$|`T_M`|membrane time constant|50|ms|directly measured in Kowalski 2015|\n",
-    "|$\\tau_r$|`T_R`|refractory period|2|ms|typical absolute refractory period value|"
+    "|$\\tau_m$|`T_M`|CA3 pyramidal cell membrane time constant|50|ms|directly measured in Kowalski 2015|\n",
+    "|$\\tau_r$|`T_R`|refractory period|2|ms|typical absolute refractory period value|\n",
+    "|$v_{rest}^{INH}$|`V_REST_INH`|single-unit inhibitory resting potential|-58|mV|see NeuroElectro site|\n",
+    "|$\\tau_m^{INH}$|`T_M_INH`|CA3 inhibitory cell membrane time constant|9|ms|directly measured in Miles 1990|"
    ]
   },
   {
@@ -76,13 +78,14 @@
     "\n",
     "| symbol | variable | meaning | value | units | rationale |\n",
     "|:-------|:---------|:--------|------:|:------|:----------|\n",
-    "|$E_{leak}$|`E_LEAK`|leak reversal potential|-68|mV|same as resting|\n",
+    "|$E_{leak}$|`E_LEAK`|leak reversal potential for CA3 PCs|-68|mV|same as resting|\n",
     "|$E_{AMPA}$|`E_AMPA`|AMPA reversal potential|0|mV|taken from Huang 2015|\n",
     "|$E_{NMDA}$|`E_NMDA`|NMDA reversal potential|0|mV|taken from Huang 2015|\n",
     "|$E_{GABA}$|`E_GABA`|GABA reversal potential|-80|mV|taken from Huang 2015|\n",
     "|$\\tau_{AMPA}$|`T_AMPA`|AMPA conductance decay time|2|ms|taken from Huang 2015|\n",
     "|$\\tau_{NMDA}$|`T_NMDA`|NMDA conductance decay time|80|ms|taken from Huang 2015|\n",
-    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|5|ms|taken from Huang 2015|"
+    "|$\\tau_{GABA}$|`T_GABA`|GABA conductance decay time|5|ms|taken from Huang 2015|\n",
+    "|$E_{leak}^{INH}$|`E_LEAK_INH`|leak reversal potential for CA3 INH cells|-58|mV|same as resting|"
    ]
   },
   {
